src/objects/Third_Party__c.object
<CustomObject>
    <description>Used as an object with references to third party contacts for an IATA office.</description>
    <fields>
        <fullName>Contact_City__c</fullName>
        <label>Contact City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Group__c</fullName>
        <label>Contact Group</label>
        <picklist>
            <picklistValues>
                <fullName>RPSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC ACQUIRER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Organisation__c</fullName>
        <label>Contact Organisation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Priority__c</fullName>
        <label>Contact Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Alternate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Scope__c</fullName>
        <label>Contact Scope</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asiapac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scan</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Type__c</fullName>
        <label>Third Party Type</label>
        <picklist>
            <picklistValues>
                <fullName>Air Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airline Direct Web Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSPlink RET&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC Acquirer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clearing Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Distribution System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IATA Weblink Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Data Processing Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PALMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ticketing System Provider</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Third_Party_of_IATA_Office__c</fullName>
        <label>Third Party of IATA Office</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Third Parties (Third Party of IATA Office)</relationshipLabel>
        <relationshipName>Third_Parties2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Third Party</label>
    <nameField>
        <label>Third Party Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Third Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>